--- a/mitocode-config-cer.yml
+++ b/mitocode-config-cer.yml
@@ -1,4 +1,6 @@
 mitocode:
   course: Microservicios con spring cloud - CERTIFICATION
-  instructor: el joe GH.....
+  instructor: el joe GH.....modificado
+
+
   
