--- a/mitocode-config-cer.yml
+++ b/mitocode-config-cer.yml
@@ -1,6 +1,6 @@
 mitocode:
   course: Microservicios con spring cloud - CERTIFICATION
-  instructor: el joe GH.....modificado con segundos de mas
+  instructor: el joe GH.....modificado con segundos de mas...
 
 
   
