--- a/product-service-dev.yml
+++ b/product-service-dev.yml
@@ -11,7 +11,7 @@ spring:
   jpa:
     databasePlatform: 
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
